# JNItest

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/JNI/: Android.mk  Application.mk  main.cpp
app/src/main/JNI/lib/: curl_config.h
app/src/main/cpp/: Android.mk  JNILoader.cpp  com_example_testjni_JNILoader.h  native-lib.cpp
app/src/main/java/com/example/jnitestdemo/: MainActivity.java
app/src/main/java/com/example/testjni/: JNILoader.java  MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
